--- a/test/common_config.ini
+++ b/test/common_config.ini
@@ -16,6 +16,31 @@ url = https://maps.dwd.de/geoserver/dwd/ows?service=WFS&version=2.0.0&request=Ge
 cellId = 816076022
 region = Gemeinde
 
+[dwd_Stadt_Berlin]
+cellId = 111000000
+region = Kreis
+
+[dwd_Stadt_Hamburg]
+cellId = 102000000
+region = Kreis
+
+[dwd_Stadt_Frankfurt]
+cellId = 106412000
+region = Kreis
+
+[dwd_Stadt_Frankfurt2]
+cellId = 806412000
+region = Gemeinde
+
+[dwd_Stadt_FrankfurtNord]
+cellId = 706412101
+region = Gemeinde
+
+[dwd_Stadt_FrankfurtSued]
+cellId = 706412102
+region = Gemeinde
+#https://maps.dwd.de/geoserver/dwd/ows?service=WFS&version=2.0.0&request=GetFeature&typeName=dwd:Warngebiete_Gemeinden&CQL_FILTER=WARNCELLID=%27706412102%27&OutputFormat=application/json
+
 [dwd_buggy]
 cellId = 123456789
 region = Gemeinde
