reworked tests eg add support for detail level

--- a/test/common_config.ini
+++ b/test/common_config.ini
@@ -19,6 +19,7 @@ region = Gemeinde
 [dwd_Stadt_Berlin]
 cellId = 111000000
 region = Kreis
+detail = EVENT_ICON_DETAILS
 
 [dwd_Stadt_Hamburg]
 cellId = 102000000
